--- a/src/app/SIRF/sirfcost-tracking/sirfcost-tracking.component.html
+++ b/src/app/SIRF/sirfcost-tracking/sirfcost-tracking.component.html
@@ -1,4 +1,4 @@
-<form class="container" [formGroup]="sirfCost">
+<form class="container" [formGroup]="sirfCost" (ngSubmit)="addCost($event)">
 
 
 
@@ -65,7 +65,8 @@
         <br><br>
         <div>
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
-                <mat-button-toggle color="warn" (click)="addCost()">Add Cost</mat-button-toggle>
+                <button type="submit" (click)="addCost($event)">Add Cost</button>               
+                
                 <mat-button-toggle color="warn" (click)="clear()">Clear</mat-button-toggle>
             </mat-button-toggle-group>
         </div>
