--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -137,7 +137,7 @@
                 <mat-button-toggle (click)="newQuote()">New Quote</mat-button-toggle>
 
                 <button type="button" class="btn-add-product float-right" mat-raised-button (click)="addProduct()"
-                    [disabled]="quoteSubmitted">Add Product</button>
+                    >Add Product</button>
             </mat-button-toggle-group>
         </div>
 
