--- a/src/app/PRICING/quote-report-v2/quote-report-v2.component.html
+++ b/src/app/PRICING/quote-report-v2/quote-report-v2.component.html
@@ -113,9 +113,15 @@
                     <li>Commodities such as Oils, Shortening and Sugar can fluctuate in price daily. </li>
                     <li>This quote is subject to Caldic Order Processing Policy. Special conditions apply to Order Cut-off times, Lead times, Minimum order requirements, and product returns. Please ask for a copy of the policy if you do not have one.</li>
                     <li>Fuel surcharge may apply on deliveries</li>
-                    <li>Prices will be confirmed upon ordering and are subject to change with market conditions. However, for applicable ingredients and volumes, we encourage you to contract with us within the specific Quote Expiration Date and lock the above pricing.</li>
-                    <li>Thank you for the opportunity to present this price quotation. Should you require any additional information, please do not hesitate to contact the undersigned.</li>                
+                    <li>For quotes in USD funds, our monthly exchange rate will be applied if you choose to be invoiced in CAD funds.</li>
+                    <li>Minimum order is $400. A $75 order processing charge will be applied to all orders less than $400.</li>
+               
+                    
+                   
                 </ul>
+                <br><br>
+                Thank you for the opportunity to present this price quotation. Should you require any additional information, please do not hesitate to contact the undersigned.
+                
                 <br><br>
                 Kind Regards,
                 <br><br>
