--- a/src/app/SIRF/sirfinitiate/sirfinitiate.component.html
+++ b/src/app/SIRF/sirfinitiate/sirfinitiate.component.html
@@ -201,7 +201,7 @@
         <div class="container-half-width">
             <div *ngFor="let item of SIRFAttachmentsVIew">
 
-                    <button mat-flat-button (click)="openDocument(item)">{{item}}</button>
+                    <button mat-flat-button (click)="openDocument(item, $event)">{{item}}</button>
 
                 
 
