--- a/src/app/SIRF/sirfdetails/sirfdetails.component.html
+++ b/src/app/SIRF/sirfdetails/sirfdetails.component.html
@@ -47,6 +47,10 @@
 
         <br>
         <app-root-cause-category-list #sirfCategory SIRFNumber={{SIRFID}}></app-root-cause-category-list>
+        
+        <br>
+        
+        <mat-checkbox formControlName="IsValidComplaint">Is Valid Complaint</mat-checkbox>
 
 
 
