--- a/src/app/PRICING/quote-report-v2/quote-report-v2.component.html
+++ b/src/app/PRICING/quote-report-v2/quote-report-v2.component.html
@@ -24,7 +24,7 @@
         <tr>
             <td>To:</td>
             <td>{{firstObject.customerName}}</td>
-            <td style="padding-left: 120px;">Qutation Date:</td>
+            <td style="padding-left: 120px;">Quotation Date:</td>
             <td>{{firstObject.finalisedDate | date}}</td>
         </tr>
         <tr>
@@ -90,7 +90,7 @@
                         <td mat-cell *matCellDef="let element"> {{element.minimumOrderQuantity}} </td>
                     </ng-container>
                     <ng-container matColumnDef="estimnatedLeadTime">
-                        <th mat-header-cell *matHeaderCellDef> Estimnated Lead Time</th>
+                        <th mat-header-cell *matHeaderCellDef> Estimated Lead Time</th>
                         <td mat-cell *matCellDef="let element"> {{element.estimnatedLeadTime}} </td>
                     </ng-container>                         
                    
