--- a/src/app/SIRF/sirfreport/sirfreport.component.html
+++ b/src/app/SIRF/sirfreport/sirfreport.component.html
@@ -6,7 +6,7 @@
 
 
     <div id="left">
-        Customer Name : {{data.customerName}}
+        Customer Name : {{data.customerName}} <br>
         Customer Region: {{data.customerRegion}}
     </div>
     <div id="right">
