--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -79,7 +79,7 @@
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Opportunity Name" formControlName="OpportunityName" required>
+            <input matInput placeholder="Opportunity Name" type="text" maxlength="50" formControlName="OpportunityName" required>
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
