--- a/src/app/PRICING/quote-report-v2/quote-report-v2.component.html
+++ b/src/app/PRICING/quote-report-v2/quote-report-v2.component.html
@@ -49,49 +49,49 @@
                     <!--- Note that these columns can be defined in any order.
                                                   The actual rendered columns are set as a property on the row definition" -->
         
-                    <ng-container matColumnDef="productDescription">
+                    <ng-container matColumnDef="productDescription" >
                         <th mat-header-cell *matHeaderCellDef> Product Description</th>
-                        <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
+                        <td class="td150 td" mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
                     </ng-container>
                     <ng-container matColumnDef="productCode">
                         <th mat-header-cell *matHeaderCellDef> Product Code</th>
-                        <td mat-cell *matCellDef="let element"> {{element.productCode}} </td>
+                        <td class="td" mat-cell *matCellDef="let element"> {{element.productCode}} </td>
                     </ng-container>
                     <ng-container matColumnDef="quoteUOM">
                         <th mat-header-cell *matHeaderCellDef> UOM</th>
-                        <td mat-cell *matCellDef="let element"> {{element.quoteUOM}} </td>
+                        <td class="td tdCenterAlign" mat-cell *matCellDef="let element"> {{element.quoteUOM}} </td>
                     </ng-container>
                     <ng-container matColumnDef="packSize">
-                        <th mat-header-cell *matHeaderCellDef> Pack Size per UOM</th>
-                        <td mat-cell *matCellDef="let element"> {{element.packSize}} </td>
+                        <th mat-header-cell *matHeaderCellDef> Pack Size</th>
+                        <td class="td tdCenterAlign" mat-cell *matCellDef="let element"> {{element.packSize}} </td>
                     </ng-container>
                     <ng-container matColumnDef="containerType">
                         <th mat-header-cell *matHeaderCellDef> Packaging Type</th>
-                        <td mat-cell *matCellDef="let element"> {{element.containerType}} </td>
+                        <td class="td" mat-cell *matCellDef="let element"> {{element.containerType}} </td>
                     </ng-container>
                     <ng-container matColumnDef="sellingPricePerUOM">
-                        <th mat-header-cell *matHeaderCellDef> Selling Price Per UOM</th>
-                        <td mat-cell *matCellDef="let element"> {{element.sellingPricePerUOM}} </td>
+                        <th mat-header-cell *matHeaderCellDef> Selling Price</th>
+                        <td class="td tdCenterAlign" mat-cell *matCellDef="let element"> {{element.sellingPricePerUOM}} </td>
                     </ng-container>
                     <ng-container matColumnDef="currencyCode">
                         <th mat-header-cell *matHeaderCellDef> Quote Currency</th>
-                        <td mat-cell *matCellDef="let element"> {{element.currencyCode}} </td>
+                        <td class="td" mat-cell *matCellDef="let element"> {{element.currencyCode}} </td>
                     </ng-container>
                     <ng-container matColumnDef="transportTerms">
                         <th mat-header-cell *matHeaderCellDef> Transport Terms</th>
-                        <td mat-cell *matCellDef="let element"> {{element.transportTerms}} </td>
+                        <td class="td" mat-cell *matCellDef="let element"> {{element.transportTerms}} </td>
                     </ng-container>
                     <ng-container matColumnDef="warehouse">
                         <th mat-header-cell *matHeaderCellDef> Shipping Warehouse</th>
-                        <td mat-cell *matCellDef="let element"> {{element.warehouse}} </td>
+                        <td class="td" mat-cell *matCellDef="let element"> {{element.warehouse}} </td>
                     </ng-container>
                     <ng-container matColumnDef="minimumOrderQuantity">
                         <th mat-header-cell *matHeaderCellDef> MOQ</th>
-                        <td mat-cell *matCellDef="let element"> {{element.minimumOrderQuantity}} </td>
+                        <td class="td tdCenterAlign" mat-cell *matCellDef="let element"> {{element.minimumOrderQuantity}} </td>
                     </ng-container>
                     <ng-container matColumnDef="estimnatedLeadTime">
-                        <th mat-header-cell *matHeaderCellDef> Estimated Lead Time</th>
-                        <td mat-cell *matCellDef="let element"> {{element.estimnatedLeadTime}} </td>
+                        <th mat-header-cell *matHeaderCellDef> Est. Lead Time</th>
+                        <td class="td tdCenterAlign" mat-cell *matCellDef="let element"> {{element.estimnatedLeadTime}} </td>
                     </ng-container>                         
                    
         
