--- a/src/app/SIRF/sirfsearch/sirfsearch.component.html
+++ b/src/app/SIRF/sirfsearch/sirfsearch.component.html
@@ -117,12 +117,15 @@
                 <th mat-header-cell *matHeaderCellDef>Actions </th>
                 <td mat-cell *matCellDef="let element">
 
-                    <mat-button-toggle [value]='element.sirfNumber' (click)="costCategory(element)">
+                    <mat-button-toggle [value]='element.sirfNumber' (click)="costCategory(element)" *ngIf="isAdminUser">
                         <mat-icon aria-hidden="false">monetization_on</mat-icon>
                     </mat-button-toggle>
-                    <mat-button-toggle [value]='element.sirfNumber' (click)="lineEdit(element)">
+                   
+                    
+                    <mat-button-toggle [value]='element.sirfNumber' (click)="lineEdit(element)" *ngIf="isAdminUser">
                         <mat-icon aria-hidden="false">edit</mat-icon>
                     </mat-button-toggle>
+               
                     <mat-button-toggle [value]='element.sirfNumber' (click)="viewReport(element)">
                         <mat-icon aria-hidden="false">description</mat-icon>
                     </mat-button-toggle>
